# TaskWeave

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: bootstrap.py
app/handlers/: main_handler.py  notification_handler.py  worker_handler.py
app/services/: artifact_service.py  notification_service.py
docs/: code.md  design.md  docs.md
examples/: .gitignore  README.md  discord_bot.py  discord_bot_multi.py  discord_url_digest_bot.py  main.py  sample.py
examples/deep_agent_runtime/: README.md  agent_tools.py  artifact_payloads.py  artifact_tools.py  bootstrap.py  common.py  content_description.py  discord_bot.py  main.py  main_agent_runnables.py  memory_reflection.py  memory_store.py  notifications.py  ollama_client.py  web_tools.py  worker_agent_runnables.py
runtime_core/: __init__.py  errors.py  registry.py  repository.py  scheduler.py
runtime_langchain/: runnable_handler.py
scripts/: run.sh  run_after.sh  run_main.sh  run_multi.sh  run_sample.sh  test_pgvector.py
src/runtime_core/: __init__.py  agent_types.py  logging_utils.py  models.py  notifications.py  registry.py  repository.py  research_flow.py  runner.py  runtime.py  scheduler.py  task_flow.py  task_plans.py  task_results.py  worker_recorder.py
src/runtime_langchain/: __init__.py  research_handlers.py  runnable_handler.py  runtime_builder.py  task_context_config.py  task_management_tools.py  task_orchestrator.py  (+1 more)
tests/: test_example_deep_agent_runtime.py  test_file_task_repository.py  test_runnable_handler.py  test_runtime_flow.py  test_runtime_runner.py
(+42 files in other folders)
