[project]
name = "taskweave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[project.optional-dependencies]
examples = [
    "deepagents==0.4.4",
    "langchain>=1.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
]
